@@ -1,6 +1,9 @@
 2012.01.06
 
 * Added a Makefile that will eventually replace the admin scripts.
+* Added *ignore files.
+* Updated Makefile with improved (and more) targets as well as support for both
+bzr and git.
 
 2009.11.09
 
